# zhen-ai-codereview

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  action.yml  pyproject.toml  requirements.txt  zhen-review.sh
.github/workflows/: example-usage.yml
examples/: user_service.py
scripts/: review_pr.py
src/zhen_ai_codereview/: __init__.py  config.py  main.py
src/zhen_ai_codereview/agent/: __init__.py  reviewer.py
src/zhen_ai_codereview/github/: client.py
src/zhen_ai_codereview/llm/: __init__.py  openai_client.py
src/zhen_ai_codereview/local/: __init__.py  scanner.py
